@@ -17,4 +17,5 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 007 ==> ExpoBlending      : 221056 : Expoblending.app causes digiKam compile to fail.
 008 ==> PicasaWebExport   : 205903 : accentuated chars are converted into a mess during picasa web export [patch]
 009 ==> PicasaWebExport   : 220433 : digiKam crash when has long time working on it.
-010 ==> 
+010 ==> PicasaWebExport   : 208426 : Exporting images fails with : "Could not connect to host xxxx.xxxx.xxxx.xxxx: Unknown error."
+011 ==>
